--- a/SimulateurAfficheurVellemanK8101/SimulateurAfficheurVellemanK8101/SimulateurAfficheurVellemanK8101.csproj
+++ b/SimulateurAfficheurVellemanK8101/SimulateurAfficheurVellemanK8101/SimulateurAfficheurVellemanK8101.csproj
@@ -44,18 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FrmView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrmView.Designer.cs">
+      <DependentUpon>FrmView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimulatorButton.cs" />
+    <Compile Include="SimulatorK8101.cs" />
     <Compile Include="SimulatorLCD.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FrmView.resx">
+      <DependentUpon>FrmView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
