--- a/SimulateurAfficheurVellemanK8101/SimulatorK8101/SimulatorK8101.csproj
+++ b/SimulateurAfficheurVellemanK8101/SimulatorK8101/SimulatorK8101.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{B096D862-B22E-4C15-8AC6-378CC6F746AB}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SimulateurAfficheurVellemanK8101</RootNamespace>
+    <RootNamespace>SimulatorK8101</RootNamespace>
     <AssemblyName>SimulateurAfficheurVellemanK8101</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -66,6 +66,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -79,6 +80,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\door_out.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
