--- a/SimulateurAfficheurVellemanK8101/SimulatorK8101/SimulatorK8101.csproj
+++ b/SimulateurAfficheurVellemanK8101/SimulatorK8101/SimulatorK8101.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{B096D862-B22E-4C15-8AC6-378CC6F746AB}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SimulatorK8101</RootNamespace>
     <AssemblyName>SimulateurAfficheurVellemanK8101</AssemblyName>
@@ -31,9 +31,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,9 +57,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimulatorButton.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="SimulatorButton.cs" />
     <Compile Include="SimulatorK8101.cs" />
     <Compile Include="SimulatorLCD.cs" />
     <Compile Include="SimulatorUsbPort.cs" />
