Ajout client(pas encore terminé)

--- a/SimuK8101/SimulatorDisplayerK8101/SimulatorDisplayerK8101.csproj
+++ b/SimuK8101/SimulatorDisplayerK8101/SimulatorDisplayerK8101.csproj
@@ -52,6 +52,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SDKLCDK8101.cs" />
     <Compile Include="SimuDisplayButtonK8101.cs" />
     <Compile Include="SimuDisplayK8101.cs" />
     <Compile Include="SimuDisplayUsbK8101.cs" />
