--- a/SimuK8101/SimulatorDisplayerK8101/SimulatorDisplayerK8101.csproj
+++ b/SimuK8101/SimulatorDisplayerK8101/SimulatorDisplayerK8101.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{C31E1A15-1CC6-44FC-98B8-5673CACFC17B}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SimulatorDisplayerK8101</RootNamespace>
     <AssemblyName>SimulatorDisplayerK8101</AssemblyName>
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,20 +47,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="SDK8101Controller.cs" />
+    <Compile Include="SDK8101MainView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SDK8101MainView.Designer.cs">
+      <DependentUpon>SDK8101MainView.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SDKLCDK8101.cs" />
-    <Compile Include="SimuDisplayButtonK8101.cs" />
+    <Compile Include="SDK8101Button.cs" />
     <Compile Include="SimuDisplayK8101.cs" />
-    <Compile Include="SimuDisplayUsbK8101.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="SDK8101Usb.cs" />
+    <EmbeddedResource Include="SDK8101MainView.resx">
+      <DependentUpon>SDK8101MainView.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
