--- a/SimuK8101/SimulatorDisplayerK8101/SimulatorDisplayerK8101.csproj
+++ b/SimuK8101/SimulatorDisplayerK8101/SimulatorDisplayerK8101.csproj
@@ -56,7 +56,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SDKLCDK8101.cs" />
+    <Compile Include="SDK8101Lcd.cs" />
     <Compile Include="SDK8101Button.cs" />
     <Compile Include="SimuDisplayK8101.cs" />
     <Compile Include="SDK8101Usb.cs" />
